--- a/src/main/webapp/WEB-INF/views/myInfo/myInfo.html
+++ b/src/main/webapp/WEB-INF/views/myInfo/myInfo.html
@@ -14,8 +14,8 @@
         <div class="ui container">
             <div class="contents my">
                 <div class="topBanner"></div>
-                <div class="ui eight item menu"> 
-                    <a class="active item" href="#">내 정보 변경</a> 
+                <div class="ui eight item menu" id="myInfoMenu"> 
+                    <a class="item" href="#">내 정보 변경</a> 
                     <a class="item" href="#">내 활동 정보</a> 
                     <a class="item" href="#">적립금</a> 
                     <a class="item" href="#">쿠폰</a> 
@@ -25,6 +25,19 @@
                     <a class="item" href="#">회원탈퇴</a> 
                 </div>
             </div>
+            
+            <script>
+			 $(function(){
+			  var sBtn = $("#myInfoMenu");    //  ul > li 이를 sBtn으로 칭한다. (클릭이벤트는 li에 적용 된다.)
+			  sBtn.find("a").click(function(){   // sBtn에 속해 있는  a 찾아 클릭 하면.
+			   sBtn.removeClass("active");     // sBtn 속에 (active) 클래스를 삭제 한다.
+			   $(this).parent().addClass("active"); // 클릭한 a에 (active)클래스를 넣는다.
+			  })
+			 })
+			</script>
+
+
+
             <div class="sideBar">
                 
             </div>
